# happyfuck

./: .gitignore  Cargo.toml  README.md
brainfuck/: Cargo.toml
brainfuck/examples/: seal.b
brainfuck/src/: args.rs  logging.rs  main.rs  runtime.rs  shell.rs
happyfuck/: Cargo.toml
happyfuck/examples/: hello.hf  seal.hf  stack.hf
happyfuck/src/: args.rs  main.rs  shell.rs
happyfuck/src/language/: errors.rs  mod.rs  parsing.rs  runtime.rs  tokenizing.rs
tutorial/: 00_hello_world.hf  01_basics.hf  02_sizes.hf  03_text.hf  04_loops.hf  05_expressions.hf
