[package]
name = "happyfuck"
version = "1.0.0"
edition = "2024"
readme = "../README.md"
license = "MIT"
authors = ["Nyeki <me@nyeki.dev>"]
description = "A superset of the Brainfuck programming language."
repository = "https://github.com/Nekidev/happyfuck"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
clap = { version = "4.6.1", features = ["derive"] }
rustyline = "18.0.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[[bin]]
name = "hf"
path = "src/main.rs"
